--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "qs": "^6.14.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
     "react-query-kit": "^3.3.2",
     "streamdown": "^1.6.5",
     "tailwind-merge": "^3.4.0",
