--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -11,3 +11,10 @@ count.txt
 .output
 .vinxi
 todos.json
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
