--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "coverage": "vitest run --coverage",
+    "test-ui": "vitest --ui",
     "test": "vitest --config vitest.config.ts",
     "lint": "eslint",
     "format": "prettier",
@@ -64,6 +65,7 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitest/coverage-v8": "4.0.18",
+    "@vitest/ui": "4.0.18",
     "babel-plugin-react-compiler": "^1.0.0",
     "jsdom": "^28.1.0",
     "prettier": "^3.5.3",
